<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <modules>
        <module>entity-management-definitions</module>
        <module>entity-management-common</module>
        <module>entity-management-web</module>
        <module>entity-management-mongo</module>
        <module>entity-management-batch</module>
      <module>entity-management-enrichment</module>
    <module>entity-management-solr</module>
     <module>entity-management-zoho</module>
  </modules>

    <parent>
        <groupId>eu.europeana</groupId>
        <artifactId>europeana-parent-pom</artifactId>
        <version>2.2</version>
    </parent>
    
    <repositories>
		<repository>
			<id>libs-release-local</id>
			<name>europeana-releases</name>
			<url>http://artifactory.eanadev.org/artifactory/libs-release</url>
		</repository>
		<repository>
			<id>libs-snapshots-local</id>
			<name>europeana-snapshots</name>
			<url>http://artifactory.eanadev.org/artifactory/libs-snapshot</url>
		</repository>
	</repositories>
    

    <groupId>eu.europeana.api</groupId>
    <artifactId>entity-management</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Entity Management</name>
    <description>Parent module for the Entity Management API</description>

    <properties>
    	<version.entitymanagementApi>0.0.1-SNAPSHOT</version.entitymanagementApi>
        <java.version>11</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <api.commons.version>0.3.8-SNAPSHOT</api.commons.version>
        <corelib.version>2.11.0</corelib.version>
        <junit.version>5.7.0</junit.version>
        <jackson.version>2.11.4</jackson.version>
        <version.commonsLang3>3.0</version.commonsLang3>
        <!-- 
        <version.annotationLd>1.1.6</version.annotationLd>
         -->
        <spring-boot.version>2.4.0</spring-boot.version>
        <swagger.version>3.0.0</swagger.version>
        <morphia.version>2.1.4</morphia.version>
        <jna.version>5.7.0</jna.version>
        <mock-webserver.version>4.9.0</mock-webserver.version>
        <testcontainers.version>1.15.2</testcontainers.version>
        <version.corelib>2.14.1-SNAPSHOT</version.corelib>
        <version.javax.annotation>1.3.2</version.javax.annotation>
        <version.log4j>2.13.3</version.log4j>
        <metis.version>4-SNAPSHOT</metis.version>
        <version.javax.validation>2.0.1.Final</version.javax.validation>
        <version.solrj>7.7.2</version.solrj>
        <apache.commons.validator.version>1.7</apache.commons.validator.version>
		<version.com.zoho.crm.java-sdk>3.0.1</version.com.zoho.crm.java-sdk>
		<version.jakarta>2.3.3</version.jakarta>
		<version.jaxb>2.3.3</version.jaxb>
		<version.saxon-he>10.5</version.saxon-he>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <!-- Import dependency management from Spring Boot (because we don't use Spring-Boot as parent pom)-->
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers</artifactId>
                <version>${testcontainers.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${testcontainers.version}</version>
                <scope>test</scope>
            </dependency>
            <!-- Required to use Testcontainers on Apple Silicon
             see: https://github.com/testcontainers/testcontainers-java/issues/3834
             -->
            <dependency>
                <groupId>net.java.dev.jna</groupId>
                <artifactId>jna</artifactId>
                <version>${jna.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>okhttp</artifactId>
                <version>${mock-webserver.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>mockwebserver</artifactId>
                <version>${mock-webserver.version}</version>
                <scope>test</scope>
            </dependency>

        </dependencies>
    </dependencyManagement>
    
      <build>
    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
      <plugins>
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.7.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
        <!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
			</configuration>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.1</version>
        </plugin>
          <plugin>
              <artifactId>maven-failsafe-plugin</artifactId>
              <version>3.0.0-M5</version>
          </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>
      </plugins>
    </pluginManagement>
          <!--  allow Maven to manipulate resource files as a part of the build process.
                 build.properties by default is expanded by spring-boot-maven-plugin
          -->
          <resources>
              <resource>
                  <directory>src/main/resources</directory>
                  <filtering>true</filtering>
              </resource>
          </resources>
          <plugins>
              <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-failsafe-plugin</artifactId>
                  <executions>
                      <execution>
                          <goals>
                              <goal>integration-test</goal>
                              <goal>verify</goal>
                          </goals>
                      </execution>
                  </executions>
              </plugin>
              <plugin>
                  <groupId>org.codehaus.mojo</groupId>
                  <artifactId>build-helper-maven-plugin</artifactId>
                  <version>3.0.0</version>
                  <executions>
                      <execution>
                          <id>add-integration-test-source</id>
                          <phase>generate-test-sources</phase>
                          <goals>
                              <goal>add-test-source</goal>
                          </goals>
                          <configuration>
                              <!-- Configures the source directory of our integration tests -->
                              <sources>
                                  <source>src/integration-test/java</source>
                              </sources>
                          </configuration>
                      </execution>
                      <execution>
                          <id>add-integration-test-resources</id>
                          <phase>generate-test-resources</phase>
                          <goals>
                              <goal>add-test-resource</goal>
                          </goals>
                          <configuration>
                              <!-- Configures the resource directory of our integration tests -->
                              <resources>
                                  <resource>
                                      <filtering>true</filtering>
                                      <directory>src/integration-test/resources</directory>
                                  </resource>
                              </resources>
                          </configuration>
                      </execution>
                  </executions>
              </plugin>
          </plugins>
  </build>

    <!-- release profile set by default so users have to explicitly trigger dev behaviour-->
    <profiles>
        <profile>
            <id>dev</id>
            <properties>
                <activeProfile>dev</activeProfile>
            </properties>
        </profile>
        <profile>
            <id>release</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <activeProfile>release</activeProfile>
            </properties>
        </profile>
    </profiles>
</project>